--- a/app/src/main/res/layout/fragment_create_timenote.xml
+++ b/app/src/main/res/layout/fragment_create_timenote.xml
@@ -243,6 +243,19 @@
                     <TextView
                         android:visibility="gone"
                         android:fontFamily="sans-serif-light"
+                        android:id="@+id/profile_add_end_date"
+                        android:layout_marginTop="8dp"
+                        android:text="@string/add_end_date"
+                        android:textSize="14sp"
+                        android:textColor="@android:color/darker_gray"
+                        app:layout_constraintTop_toBottomOf="@id/when_label"
+                        app:layout_constraintStart_toStartOf="@id/when_label"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        android:visibility="gone"
+                        android:fontFamily="sans-serif-light"
                         android:id="@+id/from_label"
                         android:layout_marginTop="8dp"
                         android:text="@string/from"
@@ -300,8 +313,8 @@
                         android:textColor="@color/colorText"
                         tools:text="27, jun 2020"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintTop_toTopOf="@id/when_label"
+                        app:layout_constraintBottom_toBottomOf="@id/when_label"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
 
@@ -424,6 +437,76 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/paid_timenote_cardview"
+                app:cardElevation="5dp"
+                app:cardCornerRadius="5dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="12dp"
+                app:layout_constraintTop_toBottomOf="@id/category_cardview"
+                android:layout_marginHorizontal="24dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:padding="16dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:fontFamily="sans-serif-light"
+                        android:id="@+id/create_timenote_paid_timenote_label"
+                        android:drawablePadding="8dp"
+                        android:textColor="@color/colorText"
+                        android:textSize="14sp"
+                        android:text="@string/paid_timenote"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        android:fontFamily="sans-serif-light"
+                        android:id="@+id/create_timenote_paid_timenote_status_no_answer"
+                        android:textColor="@color/colorTextSecondary"
+                        android:textSize="14sp"
+                        android:text="@string/no_answer"
+                        app:layout_constraintTop_toTopOf="@id/create_timenote_paid_timenote_label"
+                        app:layout_constraintBottom_toBottomOf="@id/create_timenote_paid_timenote_label"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        android:visibility="gone"
+                        android:fontFamily="sans-serif-light"
+                        android:id="@+id/create_timenote_paid_timenote_status_url"
+                        android:textColor="@color/colorText"
+                        android:textSize="14sp"
+                        android:layout_marginTop="8dp"
+                        app:layout_constraintTop_toBottomOf="@id/create_timenote_paid_timenote_status_no_answer"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        android:visibility="gone"
+                        android:fontFamily="sans-serif-light"
+                        android:id="@+id/create_timenote_paid_timenote_status_price"
+                        android:textColor="@color/colorText"
+                        android:textSize="14sp"
+                        android:layout_marginTop="8dp"
+                        app:layout_constraintTop_toTopOf="@id/create_timenote_paid_timenote_status_url"
+                        app:layout_constraintBottom_toBottomOf="@id/create_timenote_paid_timenote_status_url"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
                 android:id="@+id/title_cardview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -433,7 +516,7 @@
                 app:cardElevation="5dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/category_cardview">
+                app:layout_constraintTop_toBottomOf="@id/paid_timenote_cardview">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -484,7 +567,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/add_a_description"
-                        android:textColor="@color/colorText"
+                        android:textColor="@android:color/darker_gray"
                         android:textSize="14sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
