--- a/app/src/main/res/layout/fragment_preview_timenote_created.xml
+++ b/app/src/main/res/layout/fragment_preview_timenote_created.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".view.createTimenoteFlow.PreviewTimenoteCreated">
 
     <LinearLayout
@@ -18,221 +18,226 @@
                 android:text="@string/preview" />
 
             <TextView
-                android:fontFamily="sans-serif-light"
                 android:id="@+id/preview_created_timenote_done_btn"
                 style="@style/AppTheme.Toolbar.TextLeft"
+                android:fontFamily="sans-serif-light"
                 android:text="@string/done" />
 
 
         </androidx.appcompat.widget.Toolbar>
 
-        <TextView style="@style/AppTheme.Divider.Toolbar"/>
+        <TextView style="@style/AppTheme.Divider.Toolbar" />
 
     </LinearLayout>
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/preview_created_timenote_vp"
-        app:layout_constraintTop_toBottomOf="@id/preview_created_timenote_ll"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:scaleType="centerCrop"
         android:layout_width="match_parent"
-        android:layout_height="250dp"/>
-
-    <me.relex.circleindicator.CircleIndicator3
-        android:layout_marginBottom="8dp"
-        app:layout_constraintEnd_toEndOf="@id/separator_2"
-        app:layout_constraintStart_toStartOf="@id/separator_1"
-        app:layout_constraintBottom_toBottomOf="@id/preview_created_timenote_vp"
-        android:id="@+id/preview_created_timenote_indicator"
-        android:layout_width="0dp"
-        android:layout_height="12dp"/>
+        android:layout_height="250dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/preview_created_timenote_ll" />
 
     <TextView
-        android:paddingHorizontal="8dp"
-        tools:text="Hello"
-        android:fontFamily="sans-serif-light"
-        android:shadowDy="0"
-        android:shadowDx="0"
-        android:shadowRadius="15"
-        android:shadowColor="@android:color/black"
         android:id="@+id/preview_created_timenote_title"
-        android:textSize="18sp"
-        android:textColor="@android:color/white"
-        android:textAllCaps="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:fontFamily="sans-serif-light"
+        android:paddingHorizontal="8dp"
+        android:shadowColor="@android:color/black"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="15"
+        android:textAllCaps="true"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/preview_created_timenote_vp"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        tools:text="Hello" />
 
     <TextView
-        android:fontFamily="sans-serif-light"
-        android:shadowDy="0"
-        android:shadowDx="0"
-        android:shadowRadius="25"
-        android:shadowColor="@android:color/black"
-        android:layout_marginStart="104dp"
+        android:layout_marginStart="32dp"
         android:id="@+id/preview_created_timenote_year"
-        android:textColor="@android:color/white"
-        android:textSize="18sp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toStartOf="@id/separator_1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/separator_1"
-        app:layout_constraintBottom_toTopOf="@id/preview_created_timenote_indicator"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <TextView
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:fontFamily="sans-serif-light"
-        android:background="@drawable/custom"
-        android:shadowDy="1"
-        android:shadowDx="1"
-        android:shadowRadius="1.5"
-        android:layout_marginBottom="4dp"
         android:shadowColor="@android:color/black"
-        android:id="@+id/separator_1"
-        app:layout_constraintEnd_toStartOf="@id/preview_created_timenote_day_month"
-        app:layout_constraintStart_toEndOf="@id/preview_created_timenote_year"
-        app:layout_constraintBottom_toTopOf="@id/preview_created_timenote_indicator"
-        android:layout_width="2dp"
-        android:layout_height="48dp"/>
-
-    <TextView
-        android:fontFamily="sans-serif-light"
-        android:layout_marginHorizontal="8dp"
-        android:shadowDy="0"
         android:shadowDx="0"
-        android:shadowRadius="5"
-        android:shadowColor="@android:color/black"
-        android:gravity="center"
-        android:id="@+id/preview_created_timenote_day_month"
+        android:shadowDy="0"
+        android:shadowRadius="25"
         android:textColor="@android:color/white"
         android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@id/separator_1"
+        app:layout_constraintEnd_toStartOf="@id/separator_1"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/separator_1" />
+
+    <TextView
+        android:id="@+id/separator_1"
+        android:layout_width="2dp"
+        android:layout_height="48dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/custom"
+        android:fontFamily="sans-serif-light"
+        android:shadowColor="@android:color/black"
+        android:shadowDx="1"
+        android:shadowDy="1"
+        android:shadowRadius="1.5"
+        app:layout_constraintBottom_toBottomOf="@id/preview_created_timenote_vp"
+        app:layout_constraintEnd_toStartOf="@id/preview_created_timenote_day_month"
+        app:layout_constraintStart_toEndOf="@id/preview_created_timenote_year" />
+
+    <TextView
+        android:id="@+id/preview_created_timenote_day_month"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="8dp"
+        android:fontFamily="sans-serif-light"
+        android:gravity="center"
+        android:shadowColor="@android:color/black"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@id/separator_2"
         app:layout_constraintEnd_toStartOf="@id/separator_2"
         app:layout_constraintStart_toEndOf="@id/separator_1"
-        app:layout_constraintBottom_toBottomOf="@id/separator_2"
-        app:layout_constraintTop_toTopOf="@id/separator_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        app:layout_constraintTop_toTopOf="@id/separator_2" />
 
     <TextView
-        android:fontFamily="sans-serif-light"
-        android:background="@drawable/custom"
-        android:shadowDy="1"
-        android:shadowDx="1"
-        android:shadowRadius="1.5"
-        android:layout_marginBottom="4dp"
-        android:shadowColor="@android:color/black"
         android:id="@+id/separator_2"
-        app:layout_constraintEnd_toStartOf="@id/preview_created_timenote_time"
-        app:layout_constraintStart_toEndOf="@id/preview_created_timenote_day_month"
-        app:layout_constraintBottom_toTopOf="@id/preview_created_timenote_indicator"
         android:layout_width="2dp"
-        android:layout_height="48dp"/>
+        android:layout_height="48dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/custom"
+        android:fontFamily="sans-serif-light"
+        android:shadowColor="@android:color/black"
+        android:shadowDx="1"
+        android:shadowDy="1"
+        android:shadowRadius="1.5"
+        app:layout_constraintBottom_toBottomOf="@id/preview_created_timenote_vp"
+        app:layout_constraintEnd_toStartOf="@id/preview_created_timenote_time"
+        app:layout_constraintStart_toEndOf="@id/preview_created_timenote_day_month" />
 
     <TextView
-        android:fontFamily="sans-serif-light"
-        android:layout_marginStart="8dp"
-        android:shadowDy="1"
-        android:shadowDx="1"
-        android:shadowRadius="1.5"
-        android:shadowColor="@android:color/black"
-        android:layout_marginEnd="104dp"
         android:id="@+id/preview_created_timenote_time"
-        app:layout_constraintTop_toTopOf="@+id/separator_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:fontFamily="sans-serif-light"
+        android:shadowColor="@android:color/black"
+        android:shadowDx="1"
+        android:shadowDy="1"
+        android:shadowRadius="1.5"
         android:textColor="@android:color/white"
         android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@id/separator_2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/separator_2"
-        app:layout_constraintBottom_toBottomOf="@id/separator_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        app:layout_constraintTop_toTopOf="@+id/separator_2" />
+
+    <me.relex.circleindicator.CircleIndicator3
+        android:id="@+id/preview_created_timenote_indicator"
+        android:layout_width="0dp"
+        android:layout_height="12dp"
+        android:layout_marginTop="8dp"
+        app:ci_drawable="@drawable/dot_selected"
+        app:ci_drawable_unselected="@drawable/dot_unselected"
+        app:layout_constraintEnd_toStartOf="@id/separator_2"
+        app:layout_constraintStart_toEndOf="@id/separator_1"
+        app:layout_constraintTop_toBottomOf="@id/preview_created_timenote_vp" />
 
     <TextView
-        android:fontFamily="sans-serif-light"
         android:id="@+id/preview_created_timenote_place"
-        android:drawablePadding="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
         android:drawableStart="@drawable/ic_profile_from"
-        android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@id/preview_created_timenote_vp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:drawablePadding="8dp"
+        android:fontFamily="sans-serif-light"
         android:textColor="@color/colorText"
         android:textSize="15sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/preview_created_timenote_vp" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/where_cardview"
-        app:cardElevation="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="24dp"
         app:cardCornerRadius="5dp"
+        app:cardElevation="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@id/preview_created_timenote_place"
-        android:layout_marginHorizontal="24dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        app:layout_constraintTop_toBottomOf="@id/preview_created_timenote_place">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:padding="16dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:padding="16dp">
 
             <TextView
-                android:fontFamily="sans-serif-light"
                 android:id="@+id/share_label"
-                android:drawablePadding="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:drawableStart="@drawable/ic_share_primary_color_24dp"
+                android:drawablePadding="8dp"
+                android:fontFamily="sans-serif-light"
+                android:text="@string/share_to"
                 android:textColor="@color/colorText"
                 android:textSize="14sp"
-                android:text="@string/share_to"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
-                android:layout_marginStart="24dp"
                 android:id="@+id/preview_created_timenote_facebook"
-                android:src="@drawable/ic_facebook"
-                android:layout_marginTop="16dp"
-                app:layout_constraintEnd_toStartOf="@id/preview_created_timenote_twitter"
-                app:layout_constraintTop_toBottomOf="@id/share_label"
-                app:layout_constraintStart_toStartOf="parent"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="16dp"
+                android:src="@drawable/ic_facebook"
+                app:layout_constraintEnd_toStartOf="@id/preview_created_timenote_twitter"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/share_label" />
+
             <ImageView
                 android:id="@+id/preview_created_timenote_twitter"
-                android:src="@drawable/ic_twitter"
-                android:layout_marginTop="16dp"
-                app:layout_constraintEnd_toStartOf="@id/preview_created_timenote_linkedin"
-                app:layout_constraintTop_toBottomOf="@id/share_label"
-                app:layout_constraintStart_toEndOf="@id/preview_created_timenote_facebook"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:src="@drawable/ic_twitter"
+                app:layout_constraintEnd_toStartOf="@id/preview_created_timenote_linkedin"
+                app:layout_constraintStart_toEndOf="@id/preview_created_timenote_facebook"
+                app:layout_constraintTop_toBottomOf="@id/share_label" />
+
             <ImageView
                 android:id="@+id/preview_created_timenote_linkedin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
                 android:src="@drawable/ic_linkedin"
-                android:layout_marginTop="16dp"
                 app:layout_constraintEnd_toStartOf="@id/preview_created_timenote_instagram"
-                app:layout_constraintTop_toBottomOf="@id/share_label"
                 app:layout_constraintStart_toEndOf="@id/preview_created_timenote_twitter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                app:layout_constraintTop_toBottomOf="@id/share_label" />
+
             <ImageView
-                android:layout_marginEnd="24dp"
                 android:id="@+id/preview_created_timenote_instagram"
-                android:src="@drawable/ic_instagram"
-                android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@id/share_label"
-                app:layout_constraintStart_toEndOf="@id/preview_created_timenote_linkedin"
-                app:layout_constraintEnd_toEndOf="parent"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="24dp"
+                android:src="@drawable/ic_instagram"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/preview_created_timenote_linkedin"
+                app:layout_constraintTop_toBottomOf="@id/share_label" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
