--- a/app/src/main/res/layout/item_timenote.xml
+++ b/app/src/main/res/layout/item_timenote.xml
@@ -44,6 +44,7 @@
         android:src="@drawable/ic_more_vert_black_24dp"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="16dp"
+        android:id="@+id/timenote_options"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="wrap_content"
