--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -4,15 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
+    android:padding="4dp"
     xmlns:fancy="http://schemas.android.com/apk/res-auto">
 
     <ImageView
         android:src="@drawable/beach"
-        android:id="@+id/suggestion_imageview"
+        android:id="@+id/user_imageview"
         android:layout_marginVertical="8dp"
-        android:layout_marginStart="26dp"
-        android:layout_width="44dp"
-        android:layout_height="44dp"
+        android:layout_marginStart="16dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,31 +24,12 @@
         android:gravity="center"
         android:textColor="@color/colorText"
         tools:text="Ligue 1"
-        android:textSize="17sp"
+        android:textSize="14sp"
         android:layout_marginStart="15dp"
-        app:layout_constraintStart_toEndOf="@id/suggestion_imageview"
+        app:layout_constraintStart_toEndOf="@id/user_imageview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <mehdi.sakout.fancybuttons.FancyButton
-        fancy:fb_defaultColor="@color/white"
-        fancy:fb_borderWidth="1dp"
-        fancy:fb_borderColor="@color/colorAccentCustom"
-        fancy:fb_radius="5dp"
-        fancy:fb_text="@string/follow"
-        android:paddingVertical="6dp"
-        android:paddingHorizontal="24dp"
-        fancy:fb_textColor="@color/colorAccentCustom"
-        android:gravity="center"
-        android:layout_marginEnd="15dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:id="@+id/suggestion_follow_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    
     
 </androidx.constraintlayout.widget.ConstraintLayout>
