--- a/app/src/main/res/layout/item_timenote.xml
+++ b/app/src/main/res/layout/item_timenote.xml
@@ -197,9 +197,54 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
+
+     <LinearLayout
+         android:gravity="center"
+            android:id="@+id/timenote_fl"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@id/timenote_like"
+            app:layout_constraintStart_toStartOf="parent"
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/timenote_pic_participant_one"
+                android:src="@drawable/beach"
+                android:layout_marginEnd="-8dp"
+                android:layout_width="24dp"
+                android:layout_height="24dp"/>
+
+            <ImageView
+                android:layout_marginEnd="-8dp"
+                android:id="@+id/timenote_pic_participant_two"
+                android:src="@drawable/beach"
+                android:layout_width="24dp"
+                android:layout_height="24dp"/>
+
+            <ImageView
+                android:id="@+id/timenote_pic_participant_three"
+                android:src="@drawable/beach"
+                android:layout_width="24dp"
+                android:layout_height="24dp"/>
+
+         <TextView
+             android:id="@+id/timenote_added_by"
+             android:layout_marginStart="8dp"
+             android:textSize="12sp"
+             android:textColor="@color/colorText"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
+
+
     <TextView
         android:breakStrategy="simple"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
         android:maxLines="2"
@@ -208,7 +253,7 @@
         tools:text="#Beach#Sunset#Love#Summer#Dance#Party#Beach#Sunset#Love#Summer#Dance#Party#Beach#Sunset#Love#Summer#Dance#Party#Beach#Sunset#Love#Summer#Dance#Party"
         android:id="@+id/timenote_username_desc"
         android:textColor="@color/colorText"
-        app:layout_constraintTop_toBottomOf="@id/timenote_like"
+        app:layout_constraintTop_toBottomOf="@id/timenote_fl"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
